# eclipticae

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  pyproject.toml  sim_event.json
.github/workflows/: ci.yml  release.yml
scripts/: check_all.ps1
src/ecliptica/: __init__.py  catalog.py  cli.py  cli_ui.py  compute.py  export.py  models.py
src/ecliptica/render/: __init__.py  api.py  constants.py  globe_script_builder.py  map_script_builder.py  payload.py  saros_payload.py  saros_script_builder.py  script_builders.py  template_loader.py
src/ecliptica/render/templates/: __init__.py  globe_template.py  map_template.py  saros_template.py
src/eclipticae/: __init__.py  cli.py  compute.py  export.py
src/eclipticae/render/: __init__.py  api.py  constants.py  globe_script_builder.py  map_script_builder.py  payload.py  saros_payload.py  saros_script_builder.py  script_builders.py  template_loader.py
src/eclipticae/render/templates/: map_template.py
tests/: test_catalog.py  test_cli.py  test_compute.py  test_export.py  test_render_api.py  test_render_payload.py  test_saros_payload.py  test_script_builders.py
