[project]
name = "eclipticae"
version = "0.1.0"
description = "Compute and animate local solar eclipse circumstances."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Michel Klueger", email = "klueger@ecoinvent.org" }
]
requires-python = ">=3.11"
keywords = ["astronomy", "eclipse", "solar-eclipse", "visualization", "cli", "manim"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "astronomy-engine>=2.1.19",
    "manim>=0.19.2",
    "msgspec>=0.20.0",
    "orjson>=3.11.7",
    "prompt-toolkit>=3.0.0",
    "questionary>=2.1.1",
    "typer>=0.24.0",
]

[project.urls]
Homepage = "https://github.com/michelkluger/ecliptica"
Repository = "https://github.com/michelkluger/ecliptica"
Issues = "https://github.com/michelkluger/ecliptica/issues"
Changelog = "https://github.com/michelkluger/ecliptica/blob/main/CHANGELOG.md"

[project.scripts]
ecliptica = "ecliptica.cli:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
    "ty>=0.0.17",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
